added quarternote spacing

--- a/maestro/app/index.html
+++ b/maestro/app/index.html
@@ -39,6 +39,7 @@
               <h2>Live Transcription:</h2>
             </div>
           <canvas id="live-chord" width="940" height="300"></canvas>
+          <div id='fullNotes'></div>
 
           <div style="display:none;">
           <h2>Simple Chord</h2>
